samples/_failures_safe/1761396539_f7a2c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57e11f46.c: In function ‘main’:
./samples/SAFE/__tmp_57e11f46.c:160: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_57e11f46.c:159:35: note: to match this ‘{’
  159 |     GraphOperation operations[] = {find_shortest_path, check_connectivity
      |                                   ^
./samples/SAFE/__tmp_57e11f46.c:159:5: error: expected declaration or statement at end of input
  159 |     GraphOperation operations[] = {find_shortest_path, check_connectivity
      |     ^~~~~~~~~~~~~~
